app/globals.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

:root {
  --papir: #F5F1E8;
  --tekst: #2B2B2B;
  --gul: #E6C65C;
  --grøn: #808f2d;
  --rød: #B5523A;
  --blå: #6C7C8C;
  --fersken: #F2D6C2;
}

body {
  background: var(--papir);
  color: var(--tekst);
  font-family: 'Inter', sans-serif;
  -webkit-font-smoothing: antialiased;
}

